2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* NEWS (New in 1.6): Mention that libtoolize is no longer run
	by automake.

2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/291:
	* automake.in (macro_define): Catch variable names starting
	with `_'.
	(handle_installdirs): Rename _am_installdirs to	am__installdirs.
	* lib/am/data.am, lib/am/install.am, lib/am/libs.am,
	lib/am/lisp.am, lib/am/ltlibs.am, lib/am/mans.am,
	lib/am/progs.am, lib/am/python.am, lib/am/scripts.am,
	lib/am/texinfos.am: Likewise.
	* tests/canon5.test: Use -Wno-portability.
	* tests/vars2.test: New file.
	* tests/Makefile.am (TESTS): Add vars2.test.

2002-07-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs (AUTOMAKE): Add -Wall.
	* tests/outdir.test: Use -Wno-obsolete.

2002-07-07  Tom Tromey  <tromey@redhat.com>

	* m4/depend.m4 (_AM_DEPENDENCIES): Compute am__fastdep<compiler>
	conditional.
	* automake.in (handle_languages): Compute FASTDEP.
	* lib/am/depend2.am: Added %FASTDEP% mode.

2002-07-07  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Optional): AM_MAINTAINER_MODE is ok in Gnits mode
	now.  Fixes PR automake/332.

2002-07-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/nobase.test (test-install-exec): Move all the `test -f'
	tests in the Makefile so we can use $(EXEEXT) on programs.
	Reported by Charles Wilson.

2002-07-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/header.m4 (AM_CONFIG_HEADER): New macro.
	* tests/confh5.test: Make sure that Autoconf complains if
	AM_CONFIG_HEADER or AC_CONFIG_HEADERS is called before
	AM_INIT_AUTOMAKE.

2002-07-06  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/Automake/Channels.pm: New file.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Channels.pm.
	* automake.in: Use Automake::Channels and register some channels
	for errors and warnings.
	($exit_status): Remove, replaced by Channels::$exit_code.
	(%required_variables): Remove, Channels will filter-out duplicates
	itself.