@@ -1080,6 +1080,9 @@ register_language ('name' => 'java',
 
 ################################################################
 
+# Parse the WARNINGS environnent variable.
+&parse_WARNINGS;
+
 # Parse command line.
 &parse_arguments;
 
@@ -1337,10 +1340,15 @@ sub var_SUFFIXES_trigger ($$)
 
 ################################################################
 
-# Handle --warning=CATEGORY or -WCATEGORY
-sub setup_warnings ($$)
+
+# switch_warning ($CATEGORY)
+# --------------------------
+# If $CATEGORY is mumble, turn on the mumble channel.
+# If it's no-mumble, turn mumble off.
+# Alse handle `all' and `none' for completeness.
+sub switch_warning ($)
 {
-  my ($opt, $cat) = @_;
+  my ($cat) = @_;
   my $has_no = 0;
 
   if ($cat =~ /^no-(.*)$/)
@@ -1367,7 +1375,35 @@ sub setup_warnings ($$)
     }
   else
     {
-      msg 'unsupported', "unknown warning category `$cat'";
+      return 1;
+    }
+  return 0;
+}
+
+# parse_WARNINGS
+# --------------
+# Honor the WARNINGS environment variable.
+sub parse_WARNINGS ($$)
+{
+  if (exists $ENV{'WARNINGS'})
+    {
+      # Ignore unknown categories.  This is required because WARNINGS
+      # should be honored by many tools.
+      switch_warning $_ foreach (split (',', $ENV{'WARNINGS'}));
+    }
+}
+
+# parse_warning ($OPTION, $ARGUMENT)
+# ----------------------------------
+# Parse the argument of --warning=CATEGORY or -WCATEGORY.
+sub parse_warnings ($$)
+{
+  my ($opt, $categories) = @_;
+
+  foreach my $cat (split (',', $categories))
+    {
+      msg 'unsupported', "unknown warning category `$cat'"
+	if switch_warning $cat;
     }
 }
 
@@ -1396,11 +1432,11 @@ sub parse_arguments ()
        'a|add-missing' 	=> \$add_missing,
        'c|copy' 	=> \$copy_missing,
        'v|verbose' 	=> sub { setup_channel 'verb', silent => 0; },
-       'W|warnings:s'   => \&setup_warnings,
+       'W|warnings:s'   => \&parse_warnings,
        # These long options (--Werror and --Wno-error) for backward
        # compatibility.  Use -Werror and -Wno-error today.
-       'Werror'         => sub { setup_warnings 'W', 'error'; },
-       'Wno-error'      => sub { setup_warnings 'W', 'no-error'; },
+       'Werror'         => sub { parse_warnings 'W', 'error'; },
+       'Wno-error'      => sub { parse_warnings 'W', 'no-error'; },
       )
 	or exit 1;
 
