@@ -1,4 +1,8 @@
 New in 1.6a:
+* Support for -Wmumble and -Wno-mumble, where mumble is a warning category
+  (see `automake --help' or the manual for a list of them).
+* Honor the WARNINGS environment variable.
+* Omit the call to depcomp when using gcc3: call the compiler directly.
 * A new option, std-options, tests that programs support --help and --version
   when `make installcheck' is run.  This is enabled by --gnits.
 * Texinfo rules now support the `ps' and `pdf' targets.
@@ -6,8 +10,10 @@ New in 1.6a:
   a DESTDIR install.
 * `+=' can be used in conditionals, even if the augmented variable
   was defined for another condition.
-* It is no longuer a requirement to use AM_CONFIG_HEADER instead of
-  AC_CONFIG_HEADERS.  AM_CONFIG_HEADER is obsolete.
+* It is no longer a requirement to use AM_CONFIG_HEADER instead of
+  AC_CONFIG_HEADERS.  Although still supported, AM_CONFIG_HEADER is
+  obsolete.  It is now an error to call any of these macro before
+  AM_INIT_AUTOMAKE.
 * Use Autoconf's --trace interface to inspect configure.ac and get
   a more accurate view of it.
 * automake --output-dir is deprecated.
